---
source: crates/cestory/api/tests/test_block_abi.rs
assertion_line: 13
expression: "travel_types::<blocks::SyncParachainHeaderReq>()"
---
[
  {
    "id": 0,
    "type": {
      "def": {
        "sequence": {
          "type": 1
        }
      }
    }
  },
  {
    "id": 1,
    "type": {
      "path": [
        "sp_runtime",
        "generic",
        "header",
        "Header"
      ],
      "params": [
        {
          "name": "Number",
          "type": 2
        },
        {
          "name": "Hash",
          "type": null
        }
      ],
      "def": {
        "composite": {
          "fields": [
            {
              "name": "parent_hash",
              "type": 3,
              "typeName": "Hash::Output"
            },
            {
              "name": "number",
              "type": 6,
              "typeName": "Number"
            },
            {
              "name": "state_root",
              "type": 3,
              "typeName": "Hash::Output"
            },
            {
              "name": "extrinsics_root",
              "type": 3,
              "typeName": "Hash::Output"
            },
            {
              "name": "digest",
              "type": 7,
              "typeName": "Digest"
            }
          ]
        }
      }
    }
  },
  {
    "id": 2,
    "type": {
      "def": {
        "primitive": "u32"
      }
    }
  },
  {
    "id": 3,
    "type": {
      "path": [
        "primitive_types",
        "H256"
      ],
      "def": {
        "composite": {
          "fields": [
            {
              "type": 4,
              "typeName": "[u8; 32]"
            }
          ]
        }
      }
    }
  },
  {
    "id": 4,
    "type": {
      "def": {
        "array": {
          "len": 32,
          "type": 5
        }
      }
    }
  },
  {
    "id": 5,
    "type": {
      "def": {
        "primitive": "u8"
      }
    }
  },
  {
    "id": 6,
    "type": {
      "def": {
        "compact": {
          "type": 2
        }
      }
    }
  },
  {
    "id": 7,
    "type": {
      "path": [
        "sp_runtime",
        "generic",
        "digest",
        "Digest"
      ],
      "def": {
        "composite": {
          "fields": [
            {
              "name": "logs",
              "type": 8,
              "typeName": "Vec<DigestItem>"
            }
          ]
        }
      }
    }
  },
  {
    "id": 8,
    "type": {
      "def": {
        "sequence": {
          "type": 9
        }
      }
    }
  },
  {
    "id": 9,
    "type": {
      "path": [
        "sp_runtime",
        "generic",
        "digest",
        "DigestItem"
      ],
      "def": {
        "variant": {
          "variants": [
            {
              "name": "PreRuntime",
              "fields": [
                {
                  "type": 10,
                  "typeName": "ConsensusEngineId"
                },
                {
                  "type": 11,
                  "typeName": "Vec<u8>"
                }
              ],
              "index": 6
            },
            {
              "name": "Consensus",
              "fields": [
                {
                  "type": 10,
                  "typeName": "ConsensusEngineId"
                },
                {
                  "type": 11,
                  "typeName": "Vec<u8>"
                }
              ],
              "index": 4
            },
            {
              "name": "Seal",
              "fields": [
                {
                  "type": 10,
                  "typeName": "ConsensusEngineId"
                },
                {
                  "type": 11,
                  "typeName": "Vec<u8>"
                }
              ],
              "index": 5
            },
            {
              "name": "Other",
              "fields": [
                {
                  "type": 11,
                  "typeName": "Vec<u8>"
                }
              ],
              "index": 0
            },
            {
              "name": "RuntimeEnvironmentUpdated",
              "index": 8
            }
          ]
        }
      }
    }
  },
  {
    "id": 10,
    "type": {
      "def": {
        "array": {
          "len": 4,
          "type": 5
        }
      }
    }
  },
  {
    "id": 11,
    "type": {
      "def": {
        "sequence": {
          "type": 5
        }
      }
    }
  },
  {
    "id": 12,
    "type": {
      "def": {
        "sequence": {
          "type": 11
        }
      }
    }
  }
]
